fixed the bug
